Stretch crash fix, fullscreen btn font size, a bit longer boost

--- a/Game.Engine/wwwroot/css/game.css
+++ b/Game.Engine/wwwroot/css/game.css
@@ -1122,7 +1122,7 @@ footer .div_add_blocked {
     border-radius: 15px;
     border: 3px #e73f93 solid;
     width: 170px;
-    font-size: 16px;
+    font-size: 1em;
     height: 46px;
     padding: 0 0;
     font-weight: 600;
